# Python-Dataviz

./: .gitignore  CLAUDE.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: checks.yml
assignments/: README.md
dashboards/: README.md  app.py
data/: README.md
docs/: ai_policy.md  course_outline.md  live_coding_notes.md
notebooks/completed/: week01_intro_to_visualisation_completed.ipynb  week02_data_for_visualisation_completed.ipynb  week03_core_business_charts_completed.ipynb  week04_distributions_and_comparisons_completed.ipynb  week05_visual_design_and_storytelling_completed.ipynb  week06_geospatial_visualisation_completed.ipynb  week07_interactive_visualisation_and_dashboards_completed.ipynb  week08_project_workshop_and_peer_review_completed.ipynb
notebooks/exercises/: week01_exercises.ipynb  week02_exercises.ipynb  week03_exercises.ipynb  week04_exercises.ipynb  week05_exercises.ipynb  week06_exercises.ipynb  week07_exercises.ipynb  week08_exercises.ipynb
notebooks/live/: week01_intro_to_visualisation.ipynb  week02_data_for_visualisation.ipynb  week03_core_business_charts.ipynb  week04_distributions_and_comparisons.ipynb  week05_visual_design_and_storytelling.ipynb  week06_geospatial_visualisation.ipynb  week07_interactive_visualisation_and_dashboards.ipynb  week08_project_workshop_and_peer_review.ipynb
project_template/: README.md
schedule/: session_plan.md
scripts/: build_notebooks.py  check_no_pip.py  check_notebooks.py  fetch_data.py  generate_synthetic_data.py
src/dataviz_course/: __init__.py  loaders.py  plotting.py  (+2 more)
