[project]
name = "dataviz-course"
version = "0.1.0"
description = "Course material and environment for Data Visualisation with Python (MSc Business Analytics, CEU)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ulrich Wohak" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "streamlit>=1.33",
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbconvert>=7.16",
]

[dependency-groups]
dev = ["ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataviz_course"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Notebooks favour readability over strictness; keep the rule set lightweight.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are common in plotting calls and markdown-y code

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E402", "F401"]  # imports after prose cells; demo imports
